# ROS

./: CMakeLists.txt  Main.cpp  bashrc
exercise_31/: CMakeLists.txt  package.xml
exercise_31/scripts/: move_robot.py
exercise_33/: CMakeLists.txt  package.xml
exercise_33/scripts/: publish_age.py
my_custom_srv_msg_pkg/: CMakeLists.txt  package.xml
my_custom_srv_msg_pkg/scripts/: custom_service_server.py
my_custom_srv_msg_pkg/srv/: MyCustomServiceMessage.srv
my_package/: package.xml
my_package/src/: simple.py
my_publisher_example_pkg/: package.xml
my_publisher_example_pkg/scripts/: simple_topic_publisher.py
my_subscriber_example_pkg/: package.xml
my_subscriber_example_pkg/scripts/: simple_topic_subscriber.py
read_odometry/: CMakeLists.txt  package.xml
read_odometry/scripts/: odom_subscriber.py
